<?xml version="1.0" encoding="utf-8"?>
<resources>
<!--    <string name="app_name">Loftmoney</string>-->
    <string name="cost">Cost</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="an_error_occurred_on_the_connection">An error occurred on the connection</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="delete_items_title">Delete items</string>
    <string name="delete_items_message">Are you sure you want to delete this items?</string>
    <string name="action_mode_yes">Yes</string>
    <string name="action_mode_no">No</string>
    <string name="add_new_element_title">Add new element</string>
    <string name="budget_accounting">Budget accounting</string>
    <string name="selected">Selected: %d</string>
    <string name="balance">Balance</string>>
</resources>