<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.fragment_balance.BalanceFragment">

    <TextView
        android:id="@+id/tvBalanceFinance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:textSize="14sp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/littleTextColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="37dp"
        android:layout_marginStart="19dp"/>

    <TextView
        android:id="@+id/tvBalanceFinanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="67000"
        app:layout_constraintTop_toBottomOf="@+id/tvBalanceFinance"
        app:layout_constraintStart_toStartOf="@+id/tvBalanceFinance"
        android:textSize="48sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/accent_second" />

    <View
        android:id="@+id/dividerFinance"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/tvBalanceFinanceValue"
        android:layout_marginTop="38dp" />

    <LinearLayout
        android:id="@+id/llExpenses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/dividerFinance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/llIncomes" >

        <TextView
            android:id="@+id/tvBalanceCosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenses"
            android:textColor="@color/littleTextColor"
            android:textSize="10sp"
            android:fontFamily="sans-serif-light" />

        <TextView
            android:id="@+id/tv_expenses_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5400₽"
            android:textSize="24sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/primary_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llIncomes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/dividerFinance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llExpenses" >

        <TextView
            android:id="@+id/tvBalanceIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incomes"
            android:textColor="@color/littleTextColor"
            android:textSize="10sp"
            android:fontFamily="sans-serif-light" />

        <TextView
            android:id="@+id/tv_incomes_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="74000₽"
            android:textSize="24sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/accent_color" />
    </LinearLayout>

    <View
        android:id="@+id/dividerData"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/llIncomes" />

    <com.rodion2236.loftmoney.main.fragment_balance.BalanceView
        android:id="@+id/balanceView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/dividerData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>